# fomo-contract

./: .gitignore  Anchor.toml  Cargo.toml  deployment.json  package.json  payer.json
IDL/: fomo_contract.json  fomo_contract.ts
cli/: command.ts  scripts.ts
lib/: constant.ts  types.ts  util.ts
programs/fomo-contract/: Cargo.toml
programs/fomo-contract/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/fomo-contract/src/instructions/: burn_key.rs  create_key.rs  create_reserves.rs  create_round.rs  create_vaults.rs  fee_claim.rs  mod.rs  round_claim.rs  start_round.rs  update_round.rs  winner_claim.rs
programs/fomo-contract/src/state/: key.rs  mod.rs  round.rs
tests/: fomo-contract.ts  utils.ts
