[package]
name = "fomo-contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fomo_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
solana-program = "1.18.17"
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
mpl-core = { version = "0.7.2", features = ["anchor"] }
