[package]
name = "fomo-contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fomo_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
#idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[package.metadata.rust-analyzer]
features = ["all"]

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
solana-program = "1.16.25"
spl-token="3.0.1"
dynamic-amm = { git = "https://github.com/mercurial-finance/mercurial-dynamic-amm-sdk", features = [
    "cpi",
], rev = "7be5237e9d688f83d40df71278fdbd6ec2d42979" }
ahash = "=0.8.6"
mpl-core = "^0.8.0"




